--- a/client/assets/tailwind.css
+++ b/client/assets/tailwind.css
@@ -763,6 +763,11 @@ video {
   background-color: transparent;
 }
 
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity, 1));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
